--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
           cd ..
       - name: install mve
         env:
-          BRANCH: ${{ $github.ref_name }}
+          BRANCH: ${{ github.ref_name }}
         run: |
           git clone git@github.com:z5267282/mve.git
           cd mve
