--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,14 +10,9 @@ jobs:
     steps:
       - name: install ssh keys
         env:
-          PRIVATE: ${{ secrets.SSH_KEY_PRIVATE }}
-          PUBLIC: ${{ secrets.SSH_KEY_PUBLIC }}
+          PRIVATE: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          mkdir ~/.ssh
-          printf '%s' "$PRIVATE" > ~/.ssh/id_rsa
-          printf '%s' "$PUBLIC" > ~/.ssh/id_rsa.pub
-          # reset permissions on keys
-          chmod 600 ~/.ssh/id_rsa*
+          printf '%s' "$RIVATE" | ssh-add - > /dev/null
       - name: install mve-tests
         run: |
           git clone git@github.com:z5267282/mve-tests.git
