--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           mkdir ~/.ssh
           printf '%s' "$RIVATE" >> ~/.ssh/id_ed25519
+          tail -1 ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
       - name: install mve-tests
         run: |
