--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,8 +13,7 @@ jobs:
           PRIVATE: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           mkdir ~/.ssh
-          printf '%s' "$RIVATE" >> ~/.ssh/id_ed25519
-          tail -1 ~/.ssh/id_ed25519
+          printf '%s' "$PRIVATE" >> ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
       - name: install mve-tests
         run: |
