--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,7 +6,7 @@ on:
       - main
 jobs:
   Run-Tests:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: install ssh keys
         env:
