adjusting make script

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
         env:
           PRIVATE: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          mkdir ~/.ssh
+          [ -d ~/.ssh ] || mkdir ~/.ssh
           printf '%s\n' "$PRIVATE" >> ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
       - name: install mve-tests
