--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,6 +8,9 @@ jobs:
   Run-Tests:
     runs-on: macos-latest
     steps:
+      - name: create working directory
+        run: |
+          [ -d ./pipeline ] || mkdir ./pipeline
       - name: install ssh keys
         env:
           PRIVATE: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -16,15 +19,20 @@ jobs:
           printf '%s\n' "$PRIVATE" >> ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
       - name: install mve-tests
+        # TODO: don't checkout to pipeline fix branch
         run: |
+          [ -d mve-tests ] && rm -rf mve-tests
           git clone git@github.com:z5267282/mve-tests.git
           cd mve-tests
-          ./setup
+          git fetch origin
+          git checkout pipeline-fix
+          ./setup || exit 11
           cd ..
       - name: install mve
         env:
           BRANCH: ${{ github.head_ref }}
         run: |
+          [ -d mve ] && rm -rf mve
           git clone git@github.com:z5267282/mve.git
           cd mve
           git fetch origin
